<resources>

    <string name="app_name">EncoreLink</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="sign_up_name">Name</string>

    <string name="login_button">Login</string>
    <string name="sign_up_button">Create Account</string>

    <string name="login_tab_text">Log in</string>
    <string name="sign_up_tab_text">Sign up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_auth">AuthActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_test02">Test02Activity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_activity_organizer_dashboard">OrganizerDashboard</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>

    <string name="pending">Pending</string>
    <string name="upcoming">Upcoming</string>
    <string name="inprocess">In-Process</string>
    <string name="editProfile">Edit Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="first_name">First Name*:</string>
    <string name="last_name">Last Name*:</string>
    <string name="phone_number">Phone Number*:</string>
    <string name="video_audio_link">Video/Audio Link:</string>
    <string name="addEvent">Add Event</string>
    <string name="event_title">Event Title</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="zipcode">Zipcode</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="eventNotes">Event Notes</string>
    <string name="title_activity_musician_dashboard">MusicianDashboard</string>

</resources>
