<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrganizerCreateEvent">

    <TextView
        android:id="@+id/addEventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/event_title" />

    <EditText
        android:id="@+id/addEventTitleEditText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_row="0"
        android:textSize="14sp"
        android:inputType="text" />

    <TextView
    android:id="@+id/addEventAddress"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="5dp"
    android:layout_row="1"
    android:layout_column="0"
    android:text="@string/address" />

    <EditText
        android:id="@+id/addEventAddressEditText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_row="1"
        android:textSize="14sp"
        android:inputType="text" />

    <TextView
        android:id="@+id/addEventCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/city" />

    <EditText
        android:id="@+id/addEventCityEditText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_row="2"
        android:textSize="14sp"
        android:inputType="text" />

    <TextView
        android:id="@+id/addEventZip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/zipcode" />

    <EditText
        android:id="@+id/addEventCityZipText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_row="3"
        android:textSize="14sp"
        android:inputType="text" />

    <TextView
        android:id="@+id/addEventStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/startTime" />

    <EditText
        android:id="@+id/addEventStartTimeText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_row="4"
        android:textSize="14sp"
        android:inputType="text" />

    <TextView
        android:id="@+id/addEventEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_row="5"
        android:layout_column="0"
        android:text="@string/endTime" />

    <EditText
        android:id="@+id/addEventEndTimeText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_row="5"
        android:textSize="14sp"
        android:inputType="text" />


    <TextView
        android:id="@+id/addEventNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_row="6"
        android:layout_column="0"
        android:text="@string/eventNotes" />

    <EditText
        android:id="@+id/addEventNotesText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_row="6"
        android:textSize="14sp"
        android:inputType="text" />

</GridLayout>