<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.codefordenver.encorelink.MainScreenActivity">


    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="Profile"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/musician_firstname_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/first_name" />

    <EditText
        android:id="@+id/musician_first_name"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_row="1"
        android:textSize="14sp"
        android:inputType="text" />

    <TextView
        android:id="@+id/musician_lastname_view"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/last_name" />

    <EditText
        android:id="@+id/musician_first_name"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_row="1"
        android:textSize="14sp"
        android:inputType="text" />

    <TextView
        android:id="@+id/musician_phonenumber_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_column="0"
        android:layout_row="3"
        android:text="Phone #" />

    <EditText
        android:id="@+id/musician_talent"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:layout_column="1"
        android:layout_row="9" />

    <TextView
        android:id="@+id/streetAddressView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:layout_row="4"
        android:text="Street Address: "

        android:layout_marginStart="10dp" />

    <EditText
        android:id="@+id/musician_last_name"

        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"


        android:layout_row="2"
        android:layout_column="1"
        />

    <TextView
        android:id="@+id/cityView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_column="0"
        android:layout_row="5"
        android:text="City:" />

    <TextView
        android:id="@+id/zipcodeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_column="0"
        android:layout_row="7"
        android:text="Zipcode:" />

    <EditText
        android:id="@+id/musician_phonenumber"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:layout_row="3"
        android:layout_column="1"
        />

    <EditText
        android:id="@+id/zipcode"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:layout_column="1"
        android:layout_row="6" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_row="8"
        android:text="About You"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/musician_talent_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_column="0"
        android:layout_row="9"
        android:text="Instrument/Voice:" />

    <EditText
        android:id="@+id/musician_zipcode"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:layout_column="1"
        android:layout_row="7" />





    <TextView
        android:id="@+id/video_link_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_column="0"
        android:layout_row="10"
        android:text="@string/video_audio_link" />



    <EditText
        android:id="@+id/video_link"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:layout_column="1"
        android:layout_row="10" />

    <Button
        android:id="@+id/save_musician_profile"
        android:text="Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginBottom="20dp"
        android:layout_row="11" />

    <TextView
        android:id="@+id/stateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_column="0"
        android:layout_row="6"
        android:text="State: " />

    <EditText
        android:id="@+id/musician_street_address"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_row="4"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/musician_city"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_row="5"
        android:textSize="14sp" />

</GridLayout>
